--- a/app/static/tpl/4-404/404.html
+++ b/app/static/tpl/4-404/404.html
@@ -11,7 +11,7 @@
     <img class="rotating" src="../static/404/spaceman.svg">
     <div class="pagenotfound-text">
         <h1>迷失在太空中！</h1>
-        <h2><a href="#">返回首页</a></h2>
+        <h2><a href="#">点击返回首页</a></h2>
     </div>
     <canvas id="canvas2d"></canvas>
 </div>
